# practisingC

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: BUILD  CMakeLists.txt  main.c  palindrome.c  palindrome.h  pallindrome.c  prime.c  pyramid.c  valley.c
src_coverage/: CMakeLists.txt
test/: CMakeLists.txt
